--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "vue-loader": "^14.1.1",
     "vue-template-compiler": "^2.5.13",
     "webpack": "^4.0.1",
+    "webpack-cli": "^2.0.10",
     "webpack-dev-middleware": "^3.0.0",
     "webpack-merge": "^4.1.2"
   }
