--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
+    "cssnano": "^4.1.4",
     "eslint": "^5.6.0",
     "eslint-plugin-vue": "^4.7.1",
     "express": "^4.16.3",
     "file-loader": "^2.0.0",
     "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "pug": "^2.0.3",
     "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.1.0",
