--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,5 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v1
-    - uses: actions/bin/sh@master
-      with: [ 'cat ./source.sh' ]
+    - name: checkout repo
+      uses: actions/checkout@v1
