--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,3 +12,5 @@ jobs:
       uses: actions/checkout@v1
     - name: source source file
       uses: actions/bin/sh@master
+      with:
+        args: [ 'cat source.sh' ]
