--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,4 +12,4 @@ jobs:
       uses: actions/checkout@v1
     - name: build using docker
       run: |
-        source source.sh && npm run build
+        source source.sh && npm i && npm run build
