--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-step-progress",
-  "version": "0.3.5",
+  "version": "0.3.6",
   "repository": "bastidest/vue-step-progress",
   "description": "A Vue component to display a progressbar with labels",
   "main": "./dist/vue-step-progress.min.js",
@@ -8,7 +8,7 @@
     "dev": "node ./dev/dev-server.js",
     "build": "webpack-cli --progress --config webpack.prod.config.js"
   },
-  "author": "Basti Destruction <basti@dest.cc>",
+  "author": "Basti Destruction <bastidest@mailbox.org>",
   "license": "MIT",
   "dependencies": {
     "vue": "^2.6.12"
@@ -18,26 +18,26 @@
     "/dist"
   ],
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.10",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^4.2.2",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "cssnano": "^4.1.10",
-    "eslint": "^7.7.0",
-    "eslint-plugin-vue": "^6.2.2",
+    "eslint": "^7.15.0",
+    "eslint-plugin-vue": "^7.2.0",
     "express": "^4.17.1",
-    "mini-css-extract-plugin": "^0.10.0",
-    "node-sass": "^4.14.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "mini-css-extract-plugin": "^1.3.3",
+    "node-sass": "^5.0.0",
     "pug": "^3.0.0",
-    "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^10.0.1",
-    "style-loader": "^1.2.1",
-    "vue-loader": "^15.9.3",
+    "pug-plain-loader": "^1.1.0",
+    "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
+    "vue-loader": "^15.9.5",
     "vue-template-compiler": "^2.6.12",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-middleware": "^3.7.2"
+    "webpack": "^5.10.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-middleware": "^4.0.2"
   }
 }
