--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-step-progress",
-  "version": "0.3.6",
+  "version": "0.3.7",
   "repository": "bastidest/vue-step-progress",
   "description": "A Vue component to display a progressbar with labels",
   "main": "./dist/vue-step-progress.min.js",
@@ -29,9 +29,9 @@
     "eslint-plugin-vue": "^7.2.0",
     "express": "^4.17.1",
     "mini-css-extract-plugin": "^1.3.3",
-    "node-sass": "^5.0.0",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.1.0",
+    "sass": "^1.37.5",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "vue-loader": "^15.9.5",
