--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,10 +6,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
     steps:
     - name: checkout repo
       uses: actions/checkout@v1
     - name: build using docker
       run: |
+        sudo chown -R 1000:1000 .
         ./start.sh build
