--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   },
   "author": "Basti Destruction <bastidest@mailbox.org>",
   "license": "MIT",
-  "dependencies": {
-    "vue": "^2.6.12"
+  "peerDependencies": {
+    "vue": "2.x"
   },
   "files": [
     "/src",
@@ -22,22 +22,23 @@
     "@babel/preset-env": "^7.12.10",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
-    "css-loader": "^5.0.1",
-    "css-minimizer-webpack-plugin": "^1.1.5",
-    "cssnano": "^4.1.10",
-    "eslint": "^7.15.0",
-    "eslint-plugin-vue": "^7.2.0",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^4.0.0",
+    "cssnano": "^5.1.12",
+    "eslint": "^8.19.0",
+    "eslint-plugin-vue": "^9.2.0",
     "express": "^4.17.1",
-    "mini-css-extract-plugin": "^1.3.3",
+    "mini-css-extract-plugin": "^2.6.1",
     "pug": "^3.0.0",
     "pug-plain-loader": "^1.1.0",
     "sass": "^1.37.5",
-    "sass-loader": "^10.1.0",
-    "style-loader": "^2.0.0",
-    "vue-loader": "^15.9.5",
+    "sass-loader": "^13.0.2",
+    "style-loader": "^3.3.1",
+    "vue": "^2.7.5",
+    "vue-loader": "^15.10.0",
     "vue-template-compiler": "^2.6.12",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
-    "webpack-dev-middleware": "^4.0.2"
+    "webpack-dev-middleware": "^5.3.3"
   }
 }
