--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-step-progress",
-  "version": "1.0.1",
+  "version": "1.0.2-rc1",
   "repository": "bastidest/vue-step-progress",
   "description": "A Vue component to display a progressbar with labels",
   "main": "./dist/vue-step-progress.min.js",
